# apps/api/storage/api-docs/api-docs.json
@@ -92,22 +92,90 @@
                                                 "$ref": "#/components/schemas/Task"
                                             }
                                         },
-                                        "meta": {
+                                        "links": {
                                             "properties": {
-                                                "current_page": {
-                                                    "type": "integer"
+                                                "first": {
+                                                    "type": "string",
+                                                    "example": "http://localhost:8081/api/tasks?page=1"
                                                 },
-                                                "last_page": {
-                                                    "type": "integer"
+                                                "last": {
+                                                    "type": "string",
+                                                    "example": "http://localhost:8081/api/tasks?page=2"
                                                 },
-                                                "per_page": {
-                                                    "type": "integer"
+                                                "prev": {
+                                                    "type": "string",
+                                                    "example": null,
+                                                    "nullable": true
                                                 },
-                                                "total": {
-                                                    "type": "integer"
+                                                "next": {
+                                                    "type": "string",
+                                                    "example": "http://localhost:8081/api/tasks?page=2"
                                                 }
                                             },
                                             "type": "object"
+                                        },
+                                        "meta": {
+                                            "properties": {
+                                                "current_page": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "from": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "last_page": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "links": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "url": {
+                                                                "type": "string",
+                                                                "example": null,
+                                                                "nullable": true
+                                                            },
+                                                            "label": {
+                                                                "type": "string",
+                                                                "example": "&laquo; Previous"
+                                                            },
+                                                            "page": {
+                                                                "type": "integer",
+                                                                "example": null,
+                                                                "nullable": true
+                                                            },
+                                                            "active": {
+                                                                "type": "boolean",
+                                                                "example": false
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                },
+                                                "path": {
+                                                    "type": "string",
+                                                    "example": "http://localhost:8081/api/tasks"
+                                                },
+                                                "per_page": {
+                                                    "type": "integer",
+                                                    "example": 15
+                                                },
+                                                "to": {
+                                                    "type": "integer",
+                                                    "example": 15
+                                                },
+                                                "total": {
+                                                    "type": "integer",
+                                                    "example": 16
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Tasks retrieved successfully"
                                         }
                                     },
                                     "type": "object"
